# app-template

./: .cdtproject  .cproject  .gitignore  .project  Changelog  HISTORY  Makefile  configure  configure.in  debug.c  debug.h  do-release  do-tag  gpio_in.txt  ipc.c  main.c  mainstate.c  mainstate.h  process_frame.c  runapp.sh  template.doxygen  template.h  template_ipc.h
CGI/: .gitignore  Makefile  cgi_template.c  cgi_template.h
CGI/www/: template.js
app/: app  run.sh
cgi/: .gitignore  Makefile  cgi.c  cgi.h  cgi_template.c  cgi_template.h  oscar
cgi/www/: index-new.xhtml  index.html  index.xhtml  jquery.html  off.html  template.css  template.js
cgi/www/cgi-bin/: .gitignore  cgi
cgi/www/css/: jquery-ui-1.7.1.custom.css  styles.css  template.css
cgi/www/js/: functions.js
template.app_/: run.sh
